# open_summary

./: .env.example  .gitignore  README.md  app.py  groqapi.py  localapp.py  pyproject.toml  requirements.txt
front/: index.html  script.js  styles.css
